<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bgnew" >

    <LinearLayout
        android:id="@+id/linearLayout_insert"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout_insert_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="35dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/sender"
                android:textColor="#6D6E71" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:gravity="center"
                android:text="姓名"
                android:textColor="#006400"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_insert_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/user"
                android:textColor="#6D6E71" />

            <EditText
                android:id="@+id/editText_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false"
                android:hint="请选择接收人"
                android:textColor="#006400" />

            <Button
                android:id="@+id/button_insert_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chooseuser"
                android:textColor="#DC143C" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_insert_3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp" >

            <TextView
                android:id="@+id/textView_insert4"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/overtime"
                android:textColor="#6D6E71" />

            <EditText
                android:id="@+id/editText_insert_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false"
                android:hint="请选择截止日期"
                android:textColor="#006400" />

            <Button
                android:id="@+id/button_insert_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chooseDate"
                android:textColor="#DC143C" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_insert_4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp" >

            <TextView
                android:id="@+id/textView_insert5"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="剩余天数"
                android:textColor="#6D6E71" />

            <EditText
                android:id="@+id/editText_insert2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false"
                android:hint="剩余天数"
                android:textColor="#006400" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_insert_5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp" >

            <TextView
                android:id="@+id/textView_insert6"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/taskTitle"
                android:textColor="#6D6E71" />

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="0px"
                android:focusable="true"
                android:focusableInTouchMode="true" />

            <EditText
                android:id="@+id/editText_insert3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:editable="true"
                android:hint="请填写任务标题"
                android:textColor="#006400" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_insert_6"
            android:layout_width="fill_parent"
            android:layout_height="192dp"
            android:layout_marginRight="10dp" >

            <TextView
                android:id="@+id/textView_insert7"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/memo"
                android:textColor="#6D6E71" />

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="0px"
                android:focusable="true"
                android:focusableInTouchMode="true" />

            <EditText
                android:id="@+id/editText_insert4"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:editable="true"
                android:gravity="top"
                android:hint="请填写任务内容"
                android:textColor="#006400" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_insert_7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp" >

            <CheckBox
                android:id="@+id/checkBox_insert_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_myfollowing_selector"
                android:checked="false"
                android:paddingLeft="25dp"
                android:text="是否发送短信"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_insert_plan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp" >

            <CheckBox
                android:id="@+id/checkBox_insert_plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_myfollowing_selector"
                android:checked="false"
                android:paddingLeft="25dp"
                android:text="是否要求提出进度计划"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_insert_8"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/button_insert_relese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relese"
                android:textColor="#DC143C" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>